# pytexalarm

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: check.yml
hardware/: README.md
protocol/: readme.md  wintex-protocol.md
protocol/pcap/: README.md  recieve ranges by function.md
pytexalarm/: __init__.py  decode.py  hexdump.py  pialarm.py  trace2op.py  trace_pcap.py  trace_uart.py  udl-server.py  udl.py  udlclient.py  udlserver.py  webapp.py  webpanel.py
pytexalarm/templates/: json.jinja2  template.jinja2
templates/: config.jinja2  memory.jinja2  template.jinja2
test/: test_traces.py  test_udl.py  test_web.py
