[build-system]
requires = ["setuptools>=64.0", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
packages = ["pytexalarm"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
markers = [
    "asyncio",
]

[project]
name = "pytexalarm"
authors = [
  { name="Chris Shucksmith", email="chris@shucksmith.co.uk" },
]
description = "Interface with Texecom Alarm panels over UDL protocol in python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
license = "MIT"

dependencies = [
    "prompt_toolkit>=3.0.0",
    "aiohttp-jinja2>=1.6.0",
    "pyserial_asyncio_fast>=0.16",
]


[project.urls]
Homepage = "https://github.com/shuckc/pytexalarm"
Issues = "https://github.com/shuckc/pytexalarm/issues"

